--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -87,6 +87,19 @@ The LHCb experiment probes into the differences between matter and anti-matter b
 This thesis focuses on performance optimizations of several parts of the real-time data processing software: i) one of the particle path reconstruction steps; ii) the particle path refining step; iii) the data structures used by the real-time reconstruction algorithms. The thesis investigates and employs techniques such as vectorization, cache-friendly memory structures, microarchitecture analysis, and memory allocation optimizations.
 The resulting performance-optimized code uses today's many-core, data-parallel, superscalar processors to their full potential in order to meet the performance demands of the experiment. The thesis results show that the reconstruction step got 3 times faster, the refinement step got 2 times faster and the changes to the data model allowed vectorization of most reconstruction algorithms.
 
+%----------------------------------------------------------------------------
+% === ACKNOWLEDGMENTS ===
+%----------------------------------------------------------------------------
+
+\newpage
+\section*{Acknowledgements}
+
+I wish to express my gratitude to Sebastien Ponce, whose guidance, help and advice have been vital to the success of my thesis work and to my integration into the LHCb project.
+
+\noindent Appreciation is due to Anca-Juliana Stoica for her great efforts to improve the quality of this thesis paper.
+
+\noindent I am also grateful to Marco Clemencic, Sascha Stahl, Arthur Marius Hennequin, Michel De Cian, Paul Seyfert, and the rest of the LHCb team for their contributions, advice and discussions.
+
 
 %----------------------------------------------------------------------------
 % === TABLE OF CONTENTS, FIGURES, TABLES ===
